Try --add-opens java.base/sun.security.tools.keytool=ALL-UNNAMED on maven-compiler-plugin in order to continue accessing internal JDK module